--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -2,6 +2,20 @@
 
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
+@font-face {
+  font-family: 'Arial';
+  src: url('../fonts/ArialMT.eot');
+  src: url('../fonts/ArialMT.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/ArialMT.woff2') format('woff2'),
+      url('../fonts/ArialMT.woff') format('woff'),
+      url('../fonts/ArialMT.ttf') format('truetype'),
+      url('../fonts/ArialMT.svg#ArialMT') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 /* CSS Document */
 ::-moz-selection {
     background: #7b7d7f;
@@ -136,7 +150,7 @@
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     overflow: hidden;
-    font-family: "DM Sans", sans-serif;
+    font-family: 'Arial';
     background: #EFEFEF;
     overflow-y: auto;
   }
@@ -146,7 +160,7 @@
     transition: all 0.25s ease-out 0s;
   }
   p {
-    font-family: "DM Sans", sans-serif;
+    font-family: 'Arial';
   }
   img {
     border: 0px;
