--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -125,7 +125,7 @@
     font: inherit;
     vertical-align: baseline;
     outline: none;
-    font-family: "DM Sans", sans-serif;
+    font-family: 'Arial';
   }
   /* HTML5 display-role reset for older browsers */
   article,
