--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3090,6 +3090,20 @@ nav.navbar.header-class { display: none;}
 .exam-container.answerclass .topic-test-review .lesson .lesson-body .mcq-container .mcq-group { height: calc(100vh - 245px);}
 
 
+#exam-reminder .modal-dialog {  top: 50%; transform: translateY(-50%);  margin: 0 auto;}
+#exam-reminder .modal-dialog .modal-content { padding: 20px; border-radius: 10px;}
+#exam-reminder .modal-dialog .modal-content .modal-header { padding: 0; border: none; margin: 0 0 20px;}
+#exam-reminder .modal-dialog .modal-content .modal-header h5 { font-size: 20px; font-weight: 500; color: #218df8;}
+#exam-reminder .modal-dialog .modal-content button.close { background: none; color: #000; width: auto; height: auto;  font-size: 40px;  font-weight: 300;  position: absolute;  right: 15px;  top: 0;}
+#exam-reminder .modal-dialog .modal-content .modal-body { padding: 0;}
+#exam-reminder .modal-dialog .modal-content .modal-body .form label { color: #000000; font-size: 16px; margin: 0 0 10px;}
+#exam-reminder .modal-dialog .modal-content .modal-body .form input { border: 1px solid #BCBCBC; height: 50px; border-radius: 10px; color: #787878; background: none;}
+#exam-reminder .modal-dialog .modal-content .modal-body .form button.btn.btn-secondary {color: #000000; background: none; border: 1px solid #000000; padding: 8px 20px;}
+#exam-reminder .modal-dialog .modal-content .modal-body .form button.btn.btn-secondary:hover { background: #000000; color: #ffffff;}
+#exam-reminder .modal-dialog .modal-content .modal-body .form button.btn.btn-dark { padding: 8px 20px; background: #000000; color: #ffffff; border: 1px solid #000000;}
+#exam-reminder .modal-dialog .modal-content .modal-body .form button.btn.btn-dark:hover {  background: none; color: #000000;}
+
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
