--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3112,6 +3112,9 @@ nav.navbar.header-class { display: none;}
 .exam-container.answerclass.onequestionclass .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-group { height: calc(100vh - 140px);}
 .exam-container.answerclass.onequestionclass  .mcq-container-wrap .lesson .lesson-body .mcq-container .mcq-answer {  height: calc(100vh - 140px);}
 
+
+.exam-container .container-wrap .lesson .lesson-body p, .exam-container .container-wrap .lesson .lesson-body .mcq-container .form-group .form-check label {  font-family: 'Arial';}
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
