--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3116,6 +3116,18 @@ nav.navbar.header-class { display: none;}
 .exam-container .container-wrap .lesson .lesson-body p, .exam-container .container-wrap .lesson .lesson-body .mcq-container .form-group .form-check label {  font-family: 'Arial';}
 .exam-container.answerclass.onequestionclass .mcq-container-wrap .lesson .lesson-body .mcq-container .correctanswerclass label {font-size: 20px; line-height: 1.5; margin: 0 0 16px; font-weight: 600; font-family: 'Arial';}
 
+
+
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .startdayclass {width: 100%; display: flex; flex-wrap: wrap; margin: 0 0 20px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .startdayclass .text-field { width: 33%; margin: 0 3% 0 0;  flex: 1 0 0;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .startdayclass .text-field select { width: 100%; height: 60px; border: 1px solid #BCBCBC; border-radius: 5px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .startdayclass .text-field label { font-size: 16px; margin: 0 0 10px; font-weight: 500;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .startdayclass .text-field.ampmclass { width: 110px; flex: inherit;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .startdayclass .text-field .form-group {  width: 100%;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .add-btn { margin: 0 auto 20px; float: none; color: #fff; display: inline-block;  background: #000; border: 1px solid #000; transition: all .25s ease-in-out; padding: 10px 25px;  border-radius: 6px;  font-weight: 600; font-size: 17px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .add-btn:hover { color: #000;  background: none;}
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
