--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3126,6 +3126,8 @@ nav.navbar.header-class { display: none;}
 .live-modal .modal-dialog .modal-row .modal-col1 .form-row .startdayclass .text-field .form-group {  width: 100%;}
 .live-modal .modal-dialog .modal-row .modal-col1 .form-row .add-btn { margin: 0 auto 20px; float: none; color: #fff; display: inline-block;  background: #000; border: 1px solid #000; transition: all .25s ease-in-out; padding: 10px 25px;  border-radius: 6px;  font-weight: 600; font-size: 17px;}
 .live-modal .modal-dialog .modal-row .modal-col1 .form-row .add-btn:hover { color: #000;  background: none;}
+.live-modal .modal-dialog .modal-row .modal-col1 .card .card-body button.btn.btn-dark { margin: 0 auto 20px; float: none; color: #fff; display: inline-block; background: #000; border: 1px solid #000; transition: all .25s ease-in-out; padding: 10px 25px; border-radius: 6px; font-weight: 600; font-size: 17px;}
+.live-modal .modal-dialog .modal-row .modal-col1 .card .card-body button.btn.btn-dark:hover { color: #000; background: none;}
 
 
 @media screen and (max-width:1500px) {
