--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3137,8 +3137,13 @@ nav.navbar.header-class { display: none;}
 
 
 
+@media screen and (max-width:1599px) {
+.live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview p { width: 100%; margin: 0 0 10px;}
+}
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
+
 
 }
 
