--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3139,6 +3139,11 @@ nav.navbar.header-class { display: none;}
 .live-modal .modal-dialog .modal-row .modal-col1 .form-row .cancel-button-class:hover {  background: #000; color: #ffff;}
 
 
+.critical-reasoning .backtitleclass { width: 100%; display: flex; align-items: center; margin: 0 0 26px;}
+.critical-reasoning .backtitleclass h2 { margin: 0; padding-left: 15px; border-left: 3px solid #ef9b10;}
+
+
+
 @media screen and (max-width:1599px) {
 .live-modal .modal-dialog .modal-row .modal-col1 .form-row .text-field-preview p { width: 100%; margin: 0 0 10px;}
 }
