--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3325,7 +3325,7 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 
 .tabbody .question-item { width: 49px; margin: 5px;}
 
-.modal-expand {top: 85px;}
+.modal-expand {top: 85px;padding: 0 15px;}
 .modal-expand .container-wrap { min-height: calc(100vh - 150px);}
 
 }
@@ -3453,6 +3453,8 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 
 .tabbody .question-item {width: 45px; margin: 5px;}
 .question-tab .nav-link { padding: 0 10px; font-size: 14px;}
+
+.modal-expand .container-wrap {width: 100%;}
 
 
 }
