--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3582,4 +3582,7 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 
 .critical-reasoning h2 { font-size: 20px;}
 
+.question-tab .nav-link { font-size: 12px;}
+.modal-expand { top: 65px;}
+
 }
