--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3585,4 +3585,6 @@ nav.navbar { padding: 10px 6% 10px 55px;}
 .question-tab .nav-link { font-size: 12px;}
 .modal-expand { top: 65px;}
 
+.exam-container .container-wrap { padding: 20px;}
+
 }
