--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -3091,7 +3091,7 @@ nav.navbar.header-class { display: none;}
 .verifyemailclass .container-wrap .card .card-body .btn.btn-primary:hover { color: #FBAE1E; background: none;}
 
 
-.exam-container .topic-test-review .lesson #lesson-footer-pagination {margin: 30px 0;  display: inline-block;}
+.exam-container .topic-test-review .lesson #lesson-footer-pagination {padding: 28px 0; border-block: 1px solid #1789fa;  display: inline-block;}
 .exam-container.answerclass .topic-test-review .lesson .lesson-body .mcq-container .mcq-answer { height: calc(100vh - 245px);}
 .exam-container.answerclass .topic-test-review .lesson .lesson-body .mcq-container .mcq-group { height: calc(100vh - 245px);}
 
