--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -168,3 +168,21 @@ body {
 .login-wrapp .login-cont .login-row .login-right .card p a:hover {
     color: #fbae1e;
 }
+
+
+@media screen and (max-width:767px) {
+.login-wrapp .login-cont .login-row .login-right .card h2 { font-size: 28px;}
+.login-wrapp .login-cont .login-row .login-right .card h3 {font-size: 22px;}
+.login-wrapp .login-cont .login-row .login-right .card .forms-inputs input { height: 50px; font-size: 16px; text-align: center; color: #000;}
+.login-wrapp .login-cont .login-row .login-right .card .btn { height: 50px;  font-size: 19px;}
+.login-wrapp .login-cont .login-row .login-right .card p { font-size: 16px;}
+.login-wrapp .login-cont .login-row .login-left { width: 100%; position: relative;}
+.login-wrapp .login-cont .login-row .login-right { width: 100%; position: absolute; padding: 108px 5% 50px; text-align: center; overflow: hidden;}
+.login-wrapp .login-cont .login-row .login-right .card { background: none; overflow-y: auto; height: 100%;}
+.login-wrapp .login-cont .login-row .login-left:after { content: ""; position: absolute; width: 100%; height: 100%; background: rgb(255 255 255 / 85%); top: 0; left: 0;}
+.login-wrapp .login-head { z-index: 9;}
+.login-wrapp .login-head .logo { width: 160px;}
+.login-wrapp .login-head .logo img { width: 100%;}
+.login-wrapp .login-cont .login-row .login-right .card .forms-inputs input::placeholder { color: #000;}
+
+}
